# nexo-rs-plugin-web-search

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  nexo-plugin.toml
.github/workflows/: ci.yml  release.yml
src/: auto_discovery.rs  cli.rs  env_config.rs  lib.rs  main.rs  plugin.rs  runtime_handle.rs  tools.rs
tests/: cache_round_trip.rs  configure_path.rs  e2e_handshake.rs  manifest_parse.rs  outbound_tool_invoke.rs
